# srcly

./: .cursorrules  .gitignore  AGENTS.md  DESIGN.md  README.md  build-srcly.sh  dev.sh  publish-srcly.sh
client/: README.md  (+4 more)
server/: README.md  code-steward.py  debug_tree.py  pyproject.toml  verify_analysis.py
server/app/: config.py  main.py  models.py  run.py
server/app/routers/: analysis.py  files.py
server/app/services/: analysis.py  analysis_types.py  cache.py  css_analysis.py  data_flow_analysis.py  focus_overlay.py  ipynb_analysis.py  markdown_analysis.py  reporting.py  tree_sitter_analysis.py
server/app/services/python/: python_analysis.py
server/app/services/typescript/: typescript_analysis.py
server/tests/: repro_arrow_param.py  reproduce_captured_tooltip.py  reproduce_closure_bug.py  test_analysis_context.py  test_anonymous_naming.py  test_cli_repo_root_detection.py  test_control_flow_grouping.py  test_css_import_resolution.py  test_css_scss_analysis.py  test_data_flow.py  test_data_flow_destructuring.py  test_data_flow_scopes.py  test_data_flow_tsx_revisions.py  test_dependency_analysis.py  test_files.py  test_focus_overlay.py  test_focus_overlay_tsx.py  test_focus_scope_graph.py  test_function_body_loc.py  test_ipynb_analysis.py  test_markdown_analysis.py  test_python_analysis.py  test_reporting.py  test_scan_error_handling.py  test_tree_sitter_analysis.py  test_treemap_scopes.py  test_ts_analysis.py  test_tsx_attribute_object_parenting.py  test_tsx_metrics.py  test_tsx_scopes.py  test_unresolved_literals.py  verify_tooltip_snippets.py
(+92 files in other folders)
