[project]
name = "srcly"
version = "0.1.0"
description = "Interactive codebase treemap and metrics viewer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "lizard>=1.19.0",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]

[project.scripts]
srcly = "app.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
include = [
    "app/static/**",
]
